8293862: Debug traces for null icons inside getIcon

Basically, it's v16 of the iterative changes which
led to find the exact problems.